# rosie_map_controllers

./: CMakeLists.txt  object_save_file.txt  package.xml
launch/: rosie_map_handling.launch  rosie_map_localization.launch
maps/: .wall_save_file.txt.swp
msg/: BatteryPosition.msg  MapStoring.msg  ObjectPosition.msg  ObjectStoring.msg  WallDefinition.msg
src/: .rosie_map_localizer.cpp.swp  rosie_laser_publisher.cpp  rosie_map_localizer.cpp  rosie_map_provider.cpp  rosie_map_storing_service.cpp  rosie_rrt_service.cpp
srv/: RequestLoading.srv  RequestMapStoring.srv  RequestObjStoring.srv  RequestStoring.srv  storingFileStructures.txt
